added status endpoint
